applications/spring-cloud-gateway/2.0.0-tap.5/vegeta3DS.yaml
#@ load("@ytt:data", "data")
#@yaml/text-templated-strings
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vegeta
  namespace: micropets-dev
  labels:
    app.kubernetes.io/component: loader
    app.kubernetes.io/part-of: vegeta
    app.kubernetes.io/version: "raw"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vegeta
  template:
    metadata:
      labels:
        app: vegeta
    spec:
      volumes:
      - name: config-volume
        configMap:
          name: vegeta-config
          items:
          - key: targets.txt
            path: targets.txt
      containers:
      - name: vegeta
        image: peterevans/vegeta:6.9.1        
        command: ["sh","-c","/bin/vegeta attack -targets=/config/targets.txt -insecure -name=vegeta -rate=$(V_RATE) -duration=$(V_DURATION) | tee results.bin | vegeta report"]
        volumeMounts:
        - name: config-volume
          mountPath: /config/
      restartPolicy: Always
