applications/spring-cloud-gateway/2.0.0-tap.5/gateway.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: micropets-gateway-httpproxy
  namespace: micropets-dev
spec:
  virtualhost:
    fqdn: gateway.dev.tap5.eu.aks.mytanzu.xyz
    tls:
      passthrough: true
  tcpproxy:
    services:
      - name: micropets-gateway
        port: 443
